# Streamlit_Currencey-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup_env.bat  setup_env.sh  validate_risk_manager.py  validate_setup.py  validate_signal_processor.py  validate_task2.py
.kiro/specs/pocket-option-trading-bot/: design.md  requirements.md  tasks.md
docs/: README.md
src/backend/: __init__.py  api_manager.py  config.py  database.py  models.py  risk_manager.py  signal_processor.py  utils.py
src/frontend/: __init__.py
src/tests/: __init__.py  test_api_manager.py  test_config.py  test_database.py  test_models.py  test_risk_manager.py  test_signal_processor.py  test_utils.py
